added new html file with content and ids

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         // get data from csv file
         getData().then((data) => {
+          //each element in data array is a receipt
           console.log(data);
         });
 
